syntax = "proto3";

package game;

service GameService {

  rpc RequestGame (GameRequest) returns (GameInformation);
  rpc SubscribeToGame (GameInformation) returns (stream GameData);
}

message GameData {
  int32 generation = 1;
  bytes bitmap = 2; // bitmap compress√©
}

message Cell {
  int32 index = 1;
}

message GameInformation {
  int32 height = 1;
  int32 width = 2;
  string sessionId = 3;
}

message GameRequest {
  int32 height = 1;
  int32 width = 2;
}

message Empty {
}